Worldview: add GLText command (#291)
## Summary

Adds a new `<GLText />` command which is API-compatible with `<Text />`. Instead of overlaying DOM nodes on top of Worldview, the text is rendered in GL so it can participate in occlusion. Rendering in GL is also much faster than managing many separate DOM elements; see the GLText docs page for a performance demo.

All the necessary characters are rendered into a texture atlas using a [signed distance field](https://github.com/libgdx/libgdx/wiki/Distance-field-fonts) representation, then all characters from all children are drawn in a single draw call. More implementation details are explained in GLText.js.

![GLText demo](https://user-images.githubusercontent.com/14237/71052758-3d93c600-2101-11ea-8a96-7bc2eff14aa0.gif)

Many thanks to the following resources/implementations/references which were helpful in informing this implementation!
- Valve: [Improved Alpha-Tested Magnification for Vector Textures and Special Effects](https://steamcdn-a.akamaihd.net/apps/valve/2007/SIGGRAPH2007_AlphaTestedMagnification.pdf)
- Mapbox: [Drawing Text with Signed Distance Fields in Mapbox GL](https://blog.mapbox.com/drawing-text-with-signed-distance-fields-in-mapbox-gl-b0933af6f817)
- Otto Chrons: [Text rendering in OpenGL](http://hack.chrons.me/opengl-text-rendering/)
- Stack Overflow: [Better Quality Text in WebGL](https://stackoverflow.com/q/25956272/23649)
- https://github.com/mapbox/tiny-sdf
- [deck.gl TextLayer](https://github.com/uber/deck.gl/tree/78891632763fa655bec04d320fec3c66c85f6365/modules/layers/src/text-layer)
- [mapbox-gl-js GlyphManager](https://github.com/mapbox/mapbox-gl-js/blob/26a47e4e11dec83dc6d6190a904224c290c74f96/src/render/glyph_manager.js)
- https://github.com/dy/font-atlas-sdf


## Test plan
Added stories/screenshot tests and docs page demo. Unfortunately the code is not too easily amenable to unit testing (other than perhaps the font atlas memoization).

## Versioning impact
This PR

--- a/docs/src/2.4.ManagingTheCamera.mdx
+++ b/docs/src/2.4.ManagingTheCamera.mdx
@@ -1,5 +1,5 @@
-import CodeSandboxEmbed from './jsx/utils/CodeSandboxEmbed.js';
-import { MoveCamea, FollowObject, FollowObjectOrientation } from './jsx/allLiveEditors'
+import CodeSandboxEmbed from "./jsx/utils/CodeSandboxEmbed.js";
+import { MoveCamera, FollowObject, FollowObjectOrientation } from "./jsx/allLiveEditors";
 
 # Managing the Camera
 
@@ -33,7 +33,7 @@ import duckModel from "common/fixtures/Duck.glb"; // Webpack magic: we actually 
 
 To move the camera, we'll use a handy [useAnimationFrame](https://github.com/cruise-automation/webviz/tree/master/packages/%40cruise-automation/hooks) hook that accepts a callback which will be called at each browser repaint. In our case, whenever the callback is called, we'll increase a `count` state by 1, and use the `count` state to adjust the camera's `phi` and `thetaOffset`.
 
-<MoveCamea />
+<MoveCamera />
 
 Now the camera is moving around the scene, giving us a 360° view of the duck model!
 
