<GLText> improvements for text rendering (#360)
* Create hires mode for GLFont

* Implemented scale invariant option

* Improve rendering for scale invariant text

* Rename story to avoid confusion

* Allow for user-defined font size when using scale invariant option in GLText

* Add warning when attempting to use scaleInvariant option on non-billboard markers

* Cleanup

* Add new stories for GLText

* Remove Text story

* Remove debugSDF option from GLText

* Fix lint errors

* Fix type errors in params

* Add comment for computing the scale invariant size value

* Rename hiresFont option to highResolutionFont to make it more obvious

* Remove warning for non-billboard markers

* Use high resolution font by default

* Make scaleInvariantFontSize the only new property

* Update documentation for GLText

* Avoid unpredictable results in dynamic text tests

* Handle undefined value for property

* Handle scale invariant of zero

* Add live example for using scaleInvariantFontSize property in GLText

* Add test for scale invariance whenever canvas is resized

* Add missing story for docs

* Add a delay for docs stories

* Fix lint

* Trying out a different delay value

* Revert delay

* Try generating only one frame for matrix test

* Force screenshot mode for matrix story

* Fix lint

* Try with less steps

* Force screenshot mode

* Revert force screenshot mode

* Generate GLText font atlas with known alphabet

* Try using a lower res font

* Add optional resolution property for GLText

* Enable all stories

* Update documentation

* Update documentation based on suggestions from review

Co-Authored-By: Troy Gibb <troy.gibb@gmail.com>

* Revert changes to package-lock.json

Co-authored-by: Troy Gibb <troy.gibb@gmail.com>

--- a/docs/src/4.15.GLText.mdx
+++ b/docs/src/4.15.GLText.mdx
@@ -1,4 +1,4 @@
-import { GLText } from "./jsx/allLiveEditors";
+import { GLText, GLTextScaleInvariant } from "./jsx/allLiveEditors";
 
 # Text
 
@@ -7,3 +7,29 @@ import { GLText } from "./jsx/allLiveEditors";
 The prop types are identical to `<Text />`, except that additionally each Text object supports an optional `billboard?: boolean` property. If true (the default), text will always face the camera; if false, text may be rotated in 3D according to `pose.orientation`.
 
 <GLText />
+
+## Scale Invariance
+
+`<GLText />` also supports rendering text at a constant scale regardless of the zoom level by using the optional `scaleInvariantFontSize?: number` property. If set (default is `undefined`), the text will be rendered always at the same size, resembling the behavior of the `<Text />` command. 
+
+Please note that `scaleInvariantFontSize` only works if the `billboard` property is set to true.
+
+<GLTextScaleInvariant />
+
+## Resolution
+
+By default, `<GLText />` uses a high resolution font texture atlas for rendering text, which may have an impact on the performance of your application. 
+
+The optional `resolution?: number` property allows you to override the default high resolution. If your application does not need to render text that is too close the camera, it is recommended to reduce the font resolution to ensure a better performance.
+
+**Default value is `resolution={160}`. Minimum value is `resolution={40}`.**
+
+## Alphabet
+
+`<GLText />` generates a new texture atlas on the fly whenever a marker's text contains at least one character that was not rendered before. This is a complex operation and may impact on the performance of your application. 
+
+In order to avoid texture generation when you have an expected subset of characters, you can use the optional `alphabet?: string[]`. 
+
+For example, if markers are known to have only digits, you can use the `alphabet` property as follows to reduce the number of times the texture atlas needs to be re-generated from a worst case scenario of 10 times to only once.
+
+`<GLText alphabet{['1', '2', '3', '4', '5', '6', '7', '8', '9', '0']}>{markers}</GLText>`
