Allow custom depth and blend states in lines (#477)
* Allow custom depth and blend states in lines

* Add story for custom blend options

* Bump version number

* Add flow types for depth and blend states

* Prevent memory leaks

* Memoize render function in Lines to prevent memory leaks

* Simplified memoization

* Fix typo

--- a/docs/src/4.6.Lines.mdx
+++ b/docs/src/4.6.Lines.mdx
@@ -6,9 +6,11 @@ import { LinesDemo, LinesWireframe, LinesHitmap, LinesPoses } from "./jsx/allLiv
 
 ## Props
 
-| Name       | Type     | Default | Description                     |
-| ---------- | -------- | ------- | ------------------------------- |
-| `children` | `Line[]` | `[]`    | array of Line markers to render |
+| Name       | Type         | Default     | Description                     |
+| ---------- | ------------ | ----------- | ------------------------------- |
+| `children` | `Line[]`     | `[]`        | array of Line markers to render |
+| `depth`    | `DepthState` | `undefined` | optional depth state settings   |
+| `blend`    | `BlendState` | `undefined` | optional blend state settings   |
 
 ### Line
 
