Increase canvas resolution by using device's pixel ratio (#516)
* Increase canvas resolution by using device's pixel ratio

* Make resolution scale configurable in Worldview

* Add default values for resolutionScale

* Fix flow errors

--- a/docs/src/3.1.Worldview.mdx
+++ b/docs/src/3.1.Worldview.mdx
@@ -21,6 +21,7 @@
 | `onMouseMove`         | `MouseHandler`                                  |                        |                                                                                                         |
 | `onClick`             | `MouseHandler`                                  |                        |                                                                                                         |
 | `hitmapOnMouseMove`   | `boolean`                                       |                        | (DEPRECATED: see `disableHitmapForEvents`) if enabled, the clicked object will be returned from the mouse event handler. Disabled by default for performance reasons. |
+| `resolutionScale`     | `number`                                        | `1`                    | if present, the `canvas` element will be scaled by the given amount, improving the final render quality.
 
 _All props are optional._
 
