--- a/docs/src/3.3.Command.mdx
+++ b/docs/src/3.3.Command.mdx
@@ -1,4 +1,4 @@
-import CommandDemo from './jsx/api/Command.js';
+import CommandDemo from "./jsx/api/Command.js";
 
 # Command
 
@@ -12,17 +12,17 @@ Command is the base class for all regl-based drawing commands. Wrap this class i
 
 ##### Properties generally passed through wrapping classes
 
-| Name         | optional | type               | Default | Description                                                                       |
-| ------------ | -------- | ------------------ | ------- | --------------------------------------------------------------------------------- |
+| Name         | optional | type                | Default | Description                                                                       |
+| ------------ | -------- | ------------------- | ------- | --------------------------------------------------------------------------------- |
 | `children`   | no       | `Array<any> or any` |         | Arbitrary properties passed into reglCommand.                                     |
-| `layerIndex` | yes      | `number`           |         | defines the draw order of each command, e.g. -1 will put the shape in lower layer |
+| `layerIndex` | yes      | `number`            |         | defines the draw order of each command, e.g. -1 will put the shape in lower layer |
 
 Props relating to events are also passed through to Command instances. See Mouse Events for more.
 
 Sample usage:
 
 ```js
-import Worldview, { withPose, Command } from "regl-worldview";
+import Worldview, { withPose, Command } from "@foxglove/regl-worldview";
 
 // define our regl command
 const reglTriangle = (regl) => ({
