--- a/docs/src/2.1.QuickStart.mdx
+++ b/docs/src/2.1.QuickStart.mdx
@@ -2,16 +2,10 @@
 
 **Worldview** is a React library for rendering 2D and 3D scenes using [regl](https://github.com/regl-project/regl).
 
-Add regl-worldview to your React project:
+Add `@foxglove/regl-worldview` to your React project:
 
 ```bash
-npm install --save regl-worldview
-```
-
-If you're not using a module bundler or package manager, we have a global ("UMD") build hosted on the unpkg CDN. Simply add the following script tag to the bottom of your HTML file:
-
-```html
-<script src="https://unpkg.com/regl-worldview/dist/index.umd.js" />
+npm install --save @foxglove/regl-worldview
 ```
 
 Try rendering the [basic example](#/docs/examples/basic-example) in your app or [open it CodePen](https://codepen.io/vidaaudrey/pen/WPwmqg).
