--- a/docs/src/3.5.FlowTypes.mdx
+++ b/docs/src/3.5.FlowTypes.mdx
@@ -1,15 +1,15 @@
-import GithubLink from './jsx/utils/GithubLink'
+import GithubLink from "./jsx/utils/GithubLink";
 
 # Flow types
 
-Flow types are supported. To use the types, import directly from `regl-worldview`. <GithubLink shouldPrefixLogo href="https://github.com/cruise-automation/webviz/blob/master/packages/regl-worldview/src/types/index.js"> See GitHub for more type definitions.</GithubLink>
+Flow types are supported. To use the types, import directly from `@foxglove/regl-worldview`. <GithubLink shouldPrefixLogo href="https://github.com/foxglove/regl-worldview/blob/main/src/types/index.js"> See GitHub for more type definitions.</GithubLink>
 
 ```js
 // @flow
 import React from "react";
 
-import { Worldview, Cubes } from "regl-worldview";
-import type { Position, Orientation, Scale, Color, Cube, Pose, Props } from "regl-worldview";
+import { Worldview, Cubes } from "@foxglove/regl-worldview";
+import type { Position, Orientation, Scale, Color, Cube, Pose, Props } from "@foxglove/regl-worldview";
 
 export default function WorldviewExampe() {
   const position: Position = { x: 0, y: 0, z: 0 };
